--- a/src/index.css
+++ b/src/index.css
@@ -14,25 +14,15 @@
  * limitations under the License.
  */
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  font-family: Roboto, Helvetica, Arial, Sans-Serif;
-  font-size: 16px;
+body {
+  font-family: sans-serif;
+  margin: 10px;
 }
 
-#root,
-#root > div {
-  height: 100%;
-}
-
-svg {
-  transform: scale(1.4);
-}
-
-.message {
-  padding: 10px;
-  text-align: center;
+pre {
+  border: 1px solid #f0f0f0;
+  background: #f8f8f8;
+  min-height: 100px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+  padding: 5px;
 }
